--- a/client/src/app/config-setup/row-delete-confirm/row-delete-confirm.component.scss
+++ b/client/src/app/config-setup/row-delete-confirm/row-delete-confirm.component.scss
@@ -2,9 +2,6 @@ mat-card-subtitle {
   color: #fffdfd;
 }
 
-.mat-mdc-card-content {
-  padding-bottom: 0;
-}
 .row-delete-confirm-group {
   > span {
     background: #d9a11a;
